Themes/Transparency/Transparency.raw.css
/* ... */
.theme-dark .primary-jw0I4K {
	color: rgba(255, 255, 255, 0.9);
}

.theme-dark .footer-2yfCgX {
	background-color: rgba(0, 0, 0, 0.0);
	box-shadow: 0px 0px;
}

.theme-dark .buttonPrimaryLinkDefault-1PQflF {
	background-color: rgba(50, 50, 50, 0.7);
}

.theme-dark .buttonPrimaryLinkDefault-1PQflF:hover {
	background-color: rgba(50, 50, 50, 0.9);
}

.contentsLink-2ScJ_P {
	color: rgba(255, 255, 255, 0.9);
}

.theme-dark .buttonPrimaryLinkDefault-1PQflF:hover .contents-18-Yxp {
	background-image: none;
}

.buttonRedFilled-1NjJNj {
	margin-left: 8px;
}

/* unread bar */
@keyframes unread-bar-fadein {
	from {
		background-color: rgba(255, 255, 255, 0.0);
	}
	to {
		background-color: rgba(255, 255, 255, 0.7);
	}
}

.unread-23Kvxk,
.unread-1Dp-OI {
	background-color: rgba(255, 255, 255, 0.7);
	border-radius: 0px 0px 0px 0px;
	height: 32px;
	width: 3px;
	top: 0%;
	margin-top: 1px;
	animation: unread-bar-fadein 0.5s;
}

/* unread text */
@keyframes unread-text-fadein {
	from {
		color: rgba(200, 200, 200, 0.7);
	}
	to {
		color: rgba(255, 255, 255, 1.0);
	}
}

.nameUnreadText-DfkrI4,
.nameUnreadVoice-EVo-wI {
	color: #fff;
	animation: unread-text-fadein 0.5s;
}

/* default text */
.nameDefaultText-24KCy5,
.nameDefaultVoice-3WUH7s,
.nameLockedText-3pqQcL,
.nameLockedVoice-26MhB1 {
	color: rgba(200, 200, 200, 0.7);
}

@keyframes default-text-fadeout {
	from {
		background-color: rgba(0, 0, 0, 0.3);
	}
	to {
		background-color: rgba(0, 0, 0, 0.0);
	}
}
.contentDefaultText-3vZplL {
	animation: default-text-fadeout 0.5s;
	padding-left: 16px;
	margin-left: 0px;
	border-radius: 0px 4px 4px 0px;
}

.contentDefaultText-3vZplL:hover {
	
}

/* selected # symbol */
.colorSelectedText-1y4Wvs,
.colorSelectedVoice-Xcb_9R {
	color: rgba(255, 255, 255, 0.7);
}

/* selected text */
.nameSelectedText-sp_EUw,
.nameSelectedVoice-1qSph5 {
	color: rgba(255, 98, 98, 0.95);
}

/* selected bar */
.contentSelectedText-3wUhMi {
	background: rgba(0, 0, 0, 0.3);
	border-left: 3px solid rgba(255, 98, 98, 0.9);
	border-radius: 0px 4px 4px 0px;
	margin: 1px 0px 8px 0px;
	padding-left: 13px;
	color: rgba(255, 255, 255, 0.9);
}

/* hovered text */
@keyframes hover-text-fadein {
	from {
		background-color: rgba(0, 0, 0, 0.0);
	}
	to {
		background-color: rgba(0, 0, 0, 0.3);
	}
}

.contentHoveredText-2D9B-x,
.contentHoveredVoice-3p_NEO:active,
.contentSelectedVoice-1WDIBM:active {
	background-color: rgba(0, 0, 0, 0.3);
	margin: 1px 0px 8px 0px;
	padding-left: 16px;
	animation: hover-text-fadein 0.5s;
}

.content-20Aix8:active {
	transform: none;
}

.container-2Thooq {
	background: rgba(0, 0, 0, 0.3) !important;
	border-radius: 0px 0px 0px 8px;	
}

.header-2o-2hj {
	border-bottom: 0px;
}

.chat > .title-wrap.title-wrap-dark {
	border-bottom: 0px;
}

.wrapper-2NJDcI {
	background-color: rgba(255, 98, 98, 0.7);
	color: #fff;
}

/* unread badge */
.badge {
	background-color: rgba(255, 98, 98, 0.7);
}

.wrapper-232cHJ {
	background-color: rgba(255, 98, 98, 0.7);
}

/* inside channels wrapper */
.guild-header header, 
.guild-channels, 
.account,
.private-channels, 
.search-bar, 
#voice-connection {
    background-color: transparent;
}

.container-1UB9sr {
	border-bottom: transparent;
	background-color: rgba(0, 0, 0, 0.3);
}

.guild-header header:hover, 
.guild-header.popout-open header {
    background: rgba(0, 0, 0, 0.15);
}
.guild-channels .channel-text.selected, 
.guild-channels .channel-text:hover, 
.private-channels .channel.selected, 
.private-channels .channel:hover {
    background: rgba(0, 0, 0, 0.15) !important;
}

.callout-backdrop {
	background-color: rgba(0, 0, 0, 0.7) !important;
	margin-left: 70px;
	margin-top: 56px;
	border-radius: 8px;
}

.nameDefault-2DI02H {
	color: rgba(255, 255, 255, 0.7);
}

/* create channel popup */
.theme-dark .input-cIJ7To {
	background-color: rgba(100, 100, 100, 0.3);
}

.buttonBrandFilledDefault-2Rs6u5 {
	margin-left: 8px;
}

.buttonBrandFilled-3Mv0Ra {
	background-color: rgba(255, 98, 98, 0.7);
	margin-left: 8px;
}

/*                                                            Voice Channel                                                           */
.nameDefault-2s3kbY {
	color: rgba(255, 255, 255, 0.7);
}

.nameSpeaking-3UhoEZ {
	text-shadow: 0px 0px 5px rgba(67, 181, 129, 0.9);
}

/*                                                                 Chat                                                               */
.chat .title-wrap {
    background: rgba(0, 0, 0, calc(1 / 255)) !important;
}

.messages-wrapper, 
.chat form .typing, 
.chat > .content, 
.chat {
    background: transparent !important;
}

.chat .content .flex-spacer, 
.channel-members {
    background: rgba(0, 0, 0, 0.5) !important;
}

.chat .content .flex-spacer {
	border-radius: 0px 0px 0px 2px;
}

.channel-members {
	border-radius: 0px 8px 0px 0px; /* if not using date viewer plugin: border-radius: 0px 8px 8px 0px; */
}

.channel-members .member.popout-open, 
.channel-members .member:hover, 
#friends .friends-table .friends-row:hover {
    background: rgba(0, 0, 0, 0.15) !important;
}

/* change font and size in channel chat */
.theme-dark .message-group .comment .markup {
    font-size: 85%;
    font-family: "Tahoma", Geneva, sans-serif;
}

/* change font and size in text box */
.textArea-2Spzkt {
    font-size: 90%;
 	font-family: "Tahoma", Geneva, sans-serif;
    letter-spacing: 0.0rem;
}

/* add drop shadow to text */
.message-group .comment .markup {
	text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
}

.theme-dark .message-group h2 strong {
	text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
}

.theme-dark .message-group h2 .timestamp {
	text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
	color: hsla(0, 0%, 100%, 0.4);
}

/* edit chat avatars */
.avatar-large {
	display: inline;
	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
	height: 50px;
	width: 50px;
	background-size: 50px 50px;
}

/* lower spacing between messages */
.message-group {
	padding: 10px 0px;
}
/* ... */

